(Bug) Fixed bugs in token stream mapping and added more tests.
Fixed token mapping to AST to be more complete.  Also added more
tests in UnparseHeadersUsingTokenStream_tests. The next step is to
fix test18 and test20, but the current work needs to get checked
in first.

J-17

--- a/tests/nonsmoke/functional/moveDeclarationTool/Makefile.am
+++ b/tests/nonsmoke/functional/moveDeclarationTool/Makefile.am
@@ -200,7 +200,6 @@ MOVE_DECLS_TESTCODES_WITH_TOKEN_UNPARSING_FULLY_SUPPORTED  = \
   inputmoveDeclarationToInnermostScope_test2015_90.C \
   inputmoveDeclarationToInnermostScope_test2015_91.C \
   inputmoveDeclarationToInnermostScope_test2015_92.C \
-  inputmoveDeclarationToInnermostScope_test2015_93.C \
   inputmoveDeclarationToInnermostScope_test2015_95.C \
   inputmoveDeclarationToInnermostScope_test2015_96.C \
   inputmoveDeclarationToInnermostScope_test2015_97.C \
@@ -263,6 +262,13 @@ MOVE_DECLS_TESTCODES_WITH_TOKEN_UNPARSING_FULLY_SUPPORTED  = \
   inputmoveDeclarationToInnermostScope_test2015_167.C \
   inputmoveDeclarationToInnermostScope_test2015_168.C
 
+if !ROSE_USE_EDG_VERSION_6_0
+MOVE_DECLS_TESTCODES_WITH_TOKEN_UNPARSING_FULLY_SUPPORTED  += \
+  inputmoveDeclarationToInnermostScope_test2015_93.C 
+endif
+
+# FIXED: DQ (5/4/2021): Failing test with newest support for token-based unparsing.
+#  inputmoveDeclarationToInnermostScope_2.C 
 
 # DQ (4/10/2021): Failing tests (only for EDG 6.x).
 # The variable declaration is moved into the case statement instead of being put at the top of the switch body.
