--- a/src/frontend/SageIII/astTokenStream/CMakeLists.txt
+++ b/src/frontend/SageIII/astTokenStream/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library( astTokenStream OBJECT
   tokenStreamMapping.C
   frontierDetection.C
   simpleFrontierDetection.C
+  artificialFrontier.C
   previousAndNextNode.C
   maxExtents.C
   detectMacroOrIncludeFileExpansions.C
@@ -19,6 +20,6 @@ add_dependencies(astTokenStream rosetta_generated)
 install(FILES
   createMap.h  doCompleteMapping.h  linearizeAST.h unparseMacro.h
   tokenStreamMapping.h frontierDetection.h simpleFrontierDetection.h previousAndNextNode.h
-  maxExtents.h detectMacroOrIncludeFileExpansions.h 
+  maxExtents.h detectMacroOrIncludeFileExpansions.h artificialFrontier.h
   detectMacroExpansionsToBeUnparsedAsAstTransformations.h
   DESTINATION ${INCLUDE_INSTALL_DIR})
