--- a/src/frontend/SageIII/astTokenStream/Makefile.am
+++ b/src/frontend/SageIII/astTokenStream/Makefile.am
@@ -20,7 +20,8 @@ noinst_LTLIBRARIES = libastTokenStream.la
 # DQ (10/27/2013): This is the new support for token stream mapping.
 libastTokenStream_la_SOURCES = \
    tokenStreamMapping.C frontierDetection.C simpleFrontierDetection.C previousAndNextNode.C maxExtents.C \
-   detectMacroOrIncludeFileExpansions.C detectMacroExpansionsToBeUnparsedAsAstTransformations.C
+   detectMacroOrIncludeFileExpansions.C detectMacroExpansionsToBeUnparsedAsAstTransformations.C \
+   artificialFrontier.C
 
 # DQ (10/27/2013): These are required for the older tests in tests/nonsmoke/functional/roseTests/astTokenStreamTests
 libastTokenStream_la_SOURCES += createMap.C  doCompleteMapping.C linearizeAST.C unparseMacro.C
@@ -31,7 +32,8 @@ libastTokenStream_la_DEPENDENCIES =
 # Leave these header file reference in the Makefile.am (so we will pass the policy tests).
 pkginclude_HEADERS = createMap.h  doCompleteMapping.h  linearizeAST.h unparseMacro.h \
    tokenStreamMapping.h frontierDetection.h simpleFrontierDetection.h previousAndNextNode.h \
-   maxExtents.h detectMacroOrIncludeFileExpansions.h detectMacroExpansionsToBeUnparsedAsAstTransformations.h
+   maxExtents.h detectMacroOrIncludeFileExpansions.h detectMacroExpansionsToBeUnparsedAsAstTransformations.h \
+   artificialFrontier.h
 
 
 
