(Utility) A generalized command-line parser for suffix multipliers
* A suffix-multiplied command-line switch argument is a number
  followed by a name, such as "1MiB" (1 mebibyte), or "1h" (1 hour).

* These values can have multiple additive terms, like "1h30m" for
  one hour plus 30 minutes.

* The numbers can be integral or floating-point types which are
  supplied as template arguments to the parser.

* The parser checks for numeric overflow.

* The parser can accept an extended numeric syntax that allows
  integral and floating-point values to be specified in the C++
  literal styles, such as "0xdeadbeef" (3735928559) or
  "1.42e5" (142000.0).

RPM-35

--- a/src/Rose/CommandLine/CMakeLists.txt
+++ b/src/Rose/CommandLine/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(roseCommandLine OBJECT
   CommandLine.C)
 
 install(
-  FILES IntervalParser.h
+  FILES IntervalParser.h SuffixMultiplierParser.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/CommandLine)
 
 add_dependencies(roseCommandLine rosetta_generated)
