(Utility) Move Rose::CommandLine::DurationParser to its own file
* To clean up Rose/CommandLine.h, which should only include header
  files that live in src/Rose/CommandLine.

RPM-36

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -490,6 +490,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BitOps.h									\
 	Rose/Color.h									\
 	Rose/CommandLine.h								\
+	Rose/CommandLine/DurationParser.h						\
 	Rose/CommandLine/IntervalParser.h						\
 	Rose/CommandLine/SuffixMultiplierParser.h					\
 	Rose/Constants.h								\
