--- a/src/Rose/CommandLine/CMakeLists.txt
+++ b/src/Rose/CommandLine/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(roseCommandLine OBJECT
-  CommandLine.C)
+  CommandLine.C DurationParser.C)
 
 install(
-  FILES IntervalParser.h SuffixMultiplierParser.h
+  FILES DurationParser.h IntervalParser.h SuffixMultiplierParser.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/CommandLine)
 
 add_dependencies(roseCommandLine rosetta_generated)
