--- a/src/Rose/CommandLine/Makefile.am
+++ b/src/Rose/CommandLine/Makefile.am
@@ -3,6 +3,6 @@ AM_CPPFLAGS = $(ROSE_INCLUDES)
 
 noinst_LTLIBRARIES = librose_partial.la
 librose_partial_la_SOURCES = \
-	CommandLine.C
+	CommandLine.C DurationParser.C
 
 # Headers are installed by parent makefiles
