(Utility) Reorganized Rose/CommandLine/ directory
* Split CommandLine.C into parts based on functionality in order to
  increase parallelism for GNU make.

RPM-36

--- a/src/Rose/CommandLine/Makefile.am
+++ b/src/Rose/CommandLine/Makefile.am
@@ -3,6 +3,6 @@ AM_CPPFLAGS = $(ROSE_INCLUDES)
 
 noinst_LTLIBRARIES = librose_partial.la
 librose_partial_la_SOURCES = \
-	CommandLine.C DurationParser.C
+	DurationParser.C License.C Parser.C SelfTest.C Version.C
 
 # Headers are installed by parent makefiles
