(Automake) Prevent automake from adding -I. under src/Rose
* This fixes two problems:

  1. It allows different ROSE components to use the same base name for
  header files, such as "Settings.h" to define the `Settings` struct
  for various kinds of analyses.

  2. It works around problems on macOS due to the non-standard default
  behavior regarding case in file names.

RPM-39

--- a/src/Rose/Makefile.am
+++ b/src/Rose/Makefile.am
@@ -2,6 +2,7 @@
 # you're adding something that's not in ::Rose you're doing it wrong!
 
 include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
+AUTOMAKE_OPTIONS = nostdinc
 
 # Namespaces within ::Rose (see top comment). Every namespace will
 # have a directory listed here, and every directory here is a
