(Utility) Renamed <license.h> to <licenseString.h>
* Avoids problems on broken macOS file systems due to case
  insensitivity and bug in ROSE's Makefile.am files having incorrect
  -I switches that are difficult to debug from Jenkins output.

* Avoids problems with this header not living in any particular ROSE
  include subdirectory.

RPM-39

--- a/src/roseSupport/CMakeLists.txt
+++ b/src/roseSupport/CMakeLists.txt
@@ -1,10 +1,10 @@
 add_custom_command(
-  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/license.h
-  COMMAND perl ${CMAKE_SOURCE_DIR}/scripts/to-c-string.pl <${CMAKE_SOURCE_DIR}/LicenseInformation/ROSE_BSD_License.txt >license.h
+  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/licenseString.h
+  COMMAND perl ${CMAKE_SOURCE_DIR}/scripts/to-c-string.pl <${CMAKE_SOURCE_DIR}/LicenseInformation/ROSE_BSD_License.txt >licenseString.h
   DEPENDS ${CMAKE_SOURCE_DIR}/LicenseInformation/ROSE_BSD_License.txt
   COMMENT "Generating license C string...")
 
-add_custom_target(generate_license_header DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/license.h)
+add_custom_target(generate_license_header DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/licenseString.h)
 
 ########### build library ###############
 add_definitions(-DROSE_DLL_EXPORTS)
