(Build) Improve GNU Autotools parallelism for src/Rose
* Removed Makefile.am files from all subdirectories and added their
  contents to src/Rose/Makefile.am instead. This avoids recursive make
  and allows more parallelism.

RPM-40

--- a/config/Makefile.for.ROSE.includes.and.libs
+++ b/config/Makefile.for.ROSE.includes.and.libs
@@ -516,7 +516,7 @@ endif
 #    $(ROSE_CLANG_INCLUDE)
 
 SWIG_ROSE_INCLUDES = $(ROSE_INCLUDES_WITHOUT_BOOST_ISYSTEM_PATH)
-ROSE_INCLUDES = -I$(top_builddir) $(ROSE_BOOST_PREINCLUDE_PATH) $(ROSE_INCLUDES_WITHOUT_BOOST_ISYSTEM_PATH)
+ROSE_INCLUDES = -I$(top_builddir) -I$(top_builddir)/src $(ROSE_BOOST_PREINCLUDE_PATH) $(ROSE_INCLUDES_WITHOUT_BOOST_ISYSTEM_PATH)
 
 # DQ (8/15/2010): I have removed these directories from the include paths since it no longer exists.
 # I expect that the directories were removed and the include list not properly cleaned up.
