(codethorn) added temporary var optimization to Solver18
CODETHORN-70

--- a/projects/CodeThorn/src/Makefile.am
+++ b/projects/CodeThorn/src/Makefile.am
@@ -183,6 +183,7 @@ CODETHORN_HEADER_FILES=\
   Solver16.h \
   Solver17.h \
   Solver18.h \
+  Solver19.h \
   Solver8.h \
   Solver.h \
   Specialization.h \
@@ -316,6 +317,7 @@ CODETHORN_SOURCE_FILES=\
   Solver16.C \
   Solver17.C \
   Solver18.C \
+  Solver19.C \
   Solver8.C \
   Solver.C \
   Specialization.C \
