(Binary Analysis) New library identification implementation
This implementation differs from the old one in the following ways and
intends to eventually completely replace it. The old implementation
will be marked as deprecated shortly so that tools that use it can be
changed.

* Moved from the global name space to the ::Rose::BinaryAnalysis
  namespace.

* Fixed the documentation API reference manual, which had apparently
  never been examined for correctness or readability.

* API changed from a bunch of loosely connected functions in a name
  space to a class.

* Abstracted analysis configuration settings to a `Settings` class so
  that multiple instances of the analysis can each have their own
  configuration.

* Abbreviations changed from "FLIRT" to "FLIR" (by dropping
  "Technology" from the name) in order to better distinguish it from a
  different method used by a commercial tool.

* Added command-line parsers to initialize configuraiton `Settings`
  for one or more instances of this analysis.

* Added ability to select or exclude functions based on exact function
  names, regular expressions to match mangled or demangled names,
  commented text files containing exact function names, and function
  sizes.

* Shortened many of the function and type names that were redundant
  when fully qualified.

* Use shared pointers to heap-allocated objects instead of copying
  information about libraries and functions.

* Added support for all database drivers enabled in ROSE's database
  abstraction layer.

* Distinguish between connecting to an existing database and creating
  a new database.

* Analysis has its own logging facility controllable from the command
  line with the --log switch for all binary analysis tools.

* A database version number is stored in the database.

* Old databases (implied version zero, Dan's implementation) are
  automatically migrated to version 1 (current implementation),
  although the version zero information is incomplete.

* New too

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -385,6 +385,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/InstructionSemantics2/TestSemantics.h			\
 	Rose/BinaryAnalysis/InstructionSemantics2/TraceSemantics.h			\
 	Rose/BinaryAnalysis/InstructionSemantics2/Util.h				\
+	Rose/BinaryAnalysis/LibraryIdentification.h					\
 	Rose/BinaryAnalysis/MagicNumber.h						\
 	Rose/BinaryAnalysis/Matrix.h							\
 	Rose/BinaryAnalysis/MemoryMap.h							\
